# divexplorer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOP.md  DivExplorerExample.ipynb  Documentation.md  LICENSE  README.md  README.rst  example_compas.ipynb  example_compas_test.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-release.yml  publish.yml  release.yml  test_publish.yml
divexplorer/: FP_Divergence.py  FP_DivergenceExplorer.py  __init__.py  divexplorer.py  interactive.py  lattice_graph.py  outcomes.py  pattern_processor.py  shapley_value.py  shapley_value_FPx.py  utils_FPgrowth.py  utils_apriori.py  utils_metrics_FPx.py  utils_new_apriori.py  utils_rand_apriori.py
divexplorer/datasets/: import_datasets.py
notebooks/: DivExplorerExample.ipynb  DivExplorerTest.ipynb  Example_Divergence_analysis_COMPAS.ipynb  F1_COMPAS_complete.ipynb  F2_Adult.ipynb  import_datasets.py  process_compas.py  utils_print.py
temp/: README.md  README.rst
