[project]
authors = [{name = "Eliana Pastor", email = "eliana.pastor@polito.it"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7"
]
dependencies = [
  "matplotlib>=3.1.1",
  "numpy>=1.16.4",
  "mlxtend>=0.17.1",
  "pandas>=0.24.2",
  "plotly>=4.5.0",
  "python_igraph>=0.8.3"
]
description = ""  # TODO
keywords = [
]
license = {file = "LICENSE"}
name = "DivExplorer"
readme = "README.md"
version = "0.1.1"

[project.urls]
Documentation = "https://divexplorer.readthedocs.io/en/latest/"
Homepage = "https://divexplorer.org"
Source = "https://github.com/DivExplorer/divexplorer"
