[project]
authors = [{name = "Eliana Pastor", email = "eliana.pastor@polito.it"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7"
]
dynamic = ["dependencies"]
description = "Analyze Pandas dataframes, and other tabular data (csv), to find subgroups of data with properties that diverge from those of the overall dataset"
keywords = ["Pandas", "Fairness", "Subgroup Analysis", "Data Mining"]
license = {file = "LICENSE"}
name = "DivExplorer"
readme = "README.md"
version = "0.1.2a3"

[project.urls]
Documentation = "https://divexplorer.readthedocs.io/en/latest/"
Homepage = "https://divexplorer.org"
Source = "https://github.com/DivExplorer/divexplorer"

[tool.setuptools]
py-modules = ["divexplorer"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
