[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Eliana Pastor", email = "eliana.pastor@polito.it"},
  {name = "Luca de Alfaro", email = "luca@ucsc.edu"}
  ]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.7"
dynamic = ["dependencies"]
description = "Analyze Pandas dataframes, and other tabular data (csv), to find subgroups of data with properties that diverge from those of the overall dataset"

keywords = ["Pandas", "Fairness", "Subgroup Analysis", "Data Mining"]

license = {file = "LICENSE"}

name = "DivExplorer"
readme = "README.md"
version = "0.2.2"

[project.urls]
Documentation = "https://divexplorer.readthedocs.io/en/latest/"
Homepage = "https://divexplorer.github.io/"
Source = "https://github.com/DivExplorer/divexplorer"

[tool.setuptools]
packages = ["divexplorer"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
